@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150727"
-#define public MagickPackageReleaseDate "snapshot-20150727"
+#define public MagickPackageVersionAddendum ".020150809"
+#define public MagickPackageReleaseDate "snapshot-20150809"
